# nyu-course-scraper

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  backend.py  docker-compose.yml  dockerfile  main.py  nyu_courses.db  pyproject.toml  railway.json  requirements.txt  scraper.py  sql-design.txt  sql.py
backend/: app.py  pyproject.toml  sql.py
backend/data/: nyu-courses.db-info
data/: brooklyn.json
frontend/: README.md  package-lock.json
frontend/public/: index.html
frontend/src/: App.css  App.js  api.js
