[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.128.6",
    "libsql==0.1.11",
    "pydantic==2.12.5",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "uvicorn==0.40.0",
]

[project.scripts]
app = "backend.app:app"
